logs/pyutopia-plugins-common.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kend'...
Compiling './lib/python3.5/site-packages/kend/client.py'...
***   File "./lib/python3.5/site-packages/kend/client.py", line 183
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kend/converter'...
Listing './lib/python3.5/site-packages/kend-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyutopia-3.1.0.10.egg-info'...
Listing './lib/python3.5/site-packages/pyutopia_plugins_common-3.1.0.10.egg-info'...
Listing './lib/python3.5/site-packages/pyutopia_tools-3.1.0.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/utopia'...
Listing './lib/python3.5/site-packages/utopia/plugins'...
Listing './lib/python3.5/site-packages/utopia/plugins/common'...
Compiling './lib/python3.5/site-packages/utopia/plugins/common/crossref.py'...
***   File "./lib/python3.5/site-packages/utopia/plugins/common/crossref.py", line 34
    xref_title = re.sub(ur'[^-\u002D\u007E\u00AD\u058A\u05BE\u1400\u1806\u2010-\u2015\u2053\u207B\u208B\u2212\u2E17\u2E3A\u2E3B\u301C\u3030\u30A0\uFE31\uFE32\uFE58\uFE63\uFF0D]+', lambda x: re.escape(x.group(0)), xref_title)
                                                                                                                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/utopia/tools'...
Compiling './lib/python3.5/site-packages/utopia/tools/doi.py'...
***   File "./lib/python3.5/site-packages/utopia/tools/doi.py", line 57
    doi = re.sub(ur'[\u002D\u00AD\u2010\u2011\u2013-\u2015\u2E3A\u2E3B]', '-', doi)
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/utopia/tools/nlm.py'...
***   File "./lib/python3.5/site-packages/utopia/tools/nlm.py", line 2401
    label = re.sub(ur'[)}\]]?([-\u2010\u2011\u2012\u2013\u2014\u2015,])\s?[({[]?', r'\1', label)
                                                                                ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
